# Hots-Overlay

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  README.fr.md  README.md  SETUP.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  server.js
.github/workflows/: azure-container-webapp.yml  main_hots-overlay.yml  publish.yml
client/: .env.example  .gitignore  client.js  main.js  package-lock.json  package.json
client-rs/: Cargo.toml  Dockerfile  build-uploader.ps1  build.rs  installer.iss
client-rs/examples/: test_upload.rs
client-rs/src/: app.rs  detector.rs  main.rs  settings.rs  state.rs  tray.rs  updater.rs  uploader.rs  watcher.rs  win_utils.rs
client/public/: index.html  manifest.json  sw.js
client/public/css/: app.css
client/scripts/: configure.js
client/src/: routes.js  server.js  settings.js  uploader.js  watcher.js
docs/plans/: 2026-03-14-xp-graph-design.md  2026-03-14-xp-graph-plan.md
public/: history.html  index.html  match.html  privacy.html
public/css/: history.css  match.css  overlay.css
public/extension/: config.html  video_overlay.html
public/js/: history.js  match.js  overlay.js  xp-graph.js
scripts/: migrate-sqlite-to-mongo.js
src/: config.js  database.js  ebs.js  heroNames.js  mapImages.js  mongoSchema.js  parser.js  routes.js  swagger.json  talentIcons.js  twitch.js  watcher.js
src/db/: connection.js  match.model.js
twitch-extension/: config.html  overlay.html  package.json  viewer.html
twitch-extension/assets/: TWITCH_SUBMISSION.md  screenshot-mockup.html
(+11 files in other folders)
